LPS-77699 Update Translations

--- a/modules/private/apps/portal-reports-engine/portal-reports-engine-console-service/src/main/resources/content/Language_ar.properties
+++ b/modules/private/apps/portal-reports-engine/portal-reports-engine-console-service/src/main/resources/content/Language_ar.properties
@@ -1,7 +1,7 @@
-email-delivery-body=الهيئة تسليم البريد الإلكتروني (Automatic Translation)
-email-delivery-subject=موضوع تسليم البريد الإلكتروني (Automatic Translation)
-email-notifications-body=هيئة إعلامات البريد الإلكتروني (Automatic Translation)
-email-notifications-subject=موضوع إعلامات البريد الإلكتروني (Automatic Translation)
-report-message-queue-size=تقرير حجم قائمة انتظار الرسائل (Automatic Translation)
-reports-group-service-configuration-name=تكوين خدمة مجموعة التقارير (Automatic Translation)
-reports-portlet-configuration-name=تكوين مدخل التقارير (Automatic Translation)
+email-delivery-body=نص تسليم البريد الإلكتروني
+email-delivery-subject=موضوع تسليم البريد الإلكتروني
+email-notifications-body=نص إعلامات البريد الإلكتروني
+email-notifications-subject=موضوع إعلامات البريد الإلكتروني
+report-message-queue-size=حجم قائمة انتظار رسائل التقارير
+reports-group-service-configuration-name=تكوين خدمة مجموعة التقارير
+reports-portlet-configuration-name=تكوين مدخل التقارير
