--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
@@ -1,4 +1,4 @@
-add-identity-provider=Afegir el proveïdor d'identitat (Automatic Translation)
+add-identity-provider=Afegeix proveïdor d'identitat
 add-service-provider=Afegeix proveïdor de serveis
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Esteu segur que voleu suprimir aquest certificat de la keystore? (Automatic Translation)
 assertion-lifetime=Durada de l'asserció
@@ -33,7 +33,7 @@ force-authn=Força d'autenticació
 force-authn-help=Força el proveïdor d'identitat a reautenticar l'usuari independentment del context de seguretat existent.
 identity-provider-connection=Connexió de proveïdor d'identitat
 identity-provider-connection-entity-id-help=Introduïu l'ID d'entitat del proveïdor d'identitat. Aquest valor ha de coincidir amb l'ID d'entitat declarat a les metadades de proveïdor d'identitat.
-identity-provider-connections=Connexions de proveïdor d'identitat (Automatic Translation)
+identity-provider-connections=Connexions de proveïdor d'identitat
 identity-provider-metadata-help=Proporcioneu o bé un URL a les metadades del proveïdor d'identitat o bé pengeu un fitxer de metadades XML. Quan proporcioneu un URL, les metadades s'actualitzen periòdicament. Assegureu-vos que les metadades continguin el certificat de signatura del proveïdor d'identitat.
 javax.portlet.title.1_WAR_samlportlet=Connexió persistent SAML
 javax.portlet.title.2_WAR_samlportlet=Administrador SAML
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=Algoritme de la clau
 key-length-bits=Longitud de la clau (bits)
 key-password=Contrasenya de la clau
-keystore-exception=Hi havia un problema carregant la keystore SAML. Contacteu amb l'administrador del sistema. (Automatic Translation)
-keystore-password-incorrect=Incapaç d'autenticar amb la keystore SAML. Contacteu amb l'administrador del sistema. (Automatic Translation)
+keystore-exception=Hi ha hagut un problema en carregar el keystore SAML. Poseu-vos en contacte amb l'administrador del sistema.
+keystore-password-incorrect=No es pot autenticar amb el keystore SAML. Poseu-vos en contacte amb l'administrador del sistema.
 locality=Localitat
 metadata-url=URL de metadades
 metadata-xml=XML de metadades
@@ -53,7 +53,7 @@ name-identifier-attribute-name=Nom d'atribut d'identificador de nom
 name-identifier-attribute-name-help=Introduïu el nom d'atribut d'usuari com ara <strong>emailAddress</strong> o <strong>screenName</strong>. Alternativament, podeu utilitzar el prefix <strong>static:</strong> per utilitzar un valor estàtic o el prefix <strong>expando:</strong> per utilitzar un atribut expando.
 name-identifier-attribute-type=Tipus d'atribut d'identificador de nom
 name-identifier-format=Format d'identificador de nom
-new-identity-provider=Nou proveïdor d'identitat (Automatic Translation)
+new-identity-provider=Nou proveïdor d'identitat
 new-service-provider=Nou proveïdor de serveis
 organization-unit=Unitat d'organització
 persistent=Persistent
@@ -80,7 +80,7 @@ service-provider-defaults=Predeterminats del proveïdor de serveis
 service-provider-metadata-help=Proporcioneu o bé un URL a les metadades del proveïdor de serveis o bé pengeu un fitxer de metadades XML. Quan proporcioneu un URL, les metadades s'actualitzen periòdicament. Assegureu-vos que les metadades continguin el certificat de signatura del proveïdor de serveis.
 signature-algorithm=Algoritme de signatura
 subject-dn=Tema DN
-there-are-no-identity-providers=No hi ha cap proveïdors d'identitat. (Automatic Translation)
+there-are-no-identity-providers=No hi ha proveïdors d'identitat.
 there-are-no-service-providers=No hi ha proveïdors de serveis.
 transient=Transitori
 unspecified=Sense especificar
@@ -93,4 +93,4 @@ valid-from-x-until-x=Vàlid des del {0} fins al {1}.
 validity-days=Validesa (dies)
 windows-domain-qualified-name=Nom qualificat del domini del Windows
 x509-subject-name=Nom de tema X509
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Heu de configurar la connexió de proveïdor d'identitat com a mínim una per SAML a funció. (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Heu de configurar com a mínim una connexió de proveïdor d'identitat perquè el SAML funcioni.
