--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_es.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_es.properties
@@ -1,4 +1,4 @@
-add-identity-provider=Añadir proveedor de identidad (Automatic Translation)
+add-identity-provider=Añadir proveedor de identidades
 add-service-provider=Añadir proveedor de servicios
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=¿Está seguro que desea eliminar esta certificado desde el almacén de claves? (Automatic Translation)
 assertion-lifetime=Duración de aserción
@@ -33,7 +33,7 @@ force-authn=Forzar autenticación
 force-authn-help=Obliga al proveedor de identidades a volver autenticar al usuario, independientemente del contexto de seguridad existente.
 identity-provider-connection=Conexión del proveedor de identidades
 identity-provider-connection-entity-id-help=Escriba el ID de entidad del proveedor de identidades. Este valor debe coincidir con el ID de entidad declarado en los metadatos del proveedor de identidades.
-identity-provider-connections=Conexiones de servicios de identidad (Automatic Translation)
+identity-provider-connections=Conexiones del proveedor de identidades
 identity-provider-metadata-help=Especifique una URL a los metadatos del proveedor de identidades, o bien cargue un archivo XML de metadatos. Al especificar una URL, los metadatos se actualizan periódicamente. Asegúrese de que los metadatos contengan el certificado de firma del proveedor de identidades.
 javax.portlet.title.1_WAR_samlportlet=Mantener conexión de SAML
 javax.portlet.title.2_WAR_samlportlet=Administrador de SAML
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=Algoritmo de clave
 key-length-bits=Longitud de clave (bits)
 key-password=Contraseña de clave
-keystore-exception=Hubo un problema cargando el almacén de claves SAML. Por favor, póngase en contacto con el administrador del sistema. (Automatic Translation)
-keystore-password-incorrect=No se puede autenticar con el almacén de claves SAML. Por favor, póngase en contacto con el administrador del sistema. (Automatic Translation)
+keystore-exception=Se produjo un problema al cargar el almacén de claves SAML. Póngase en contacto con el administrador del sistema.
+keystore-password-incorrect=No se puede autenticar con el almacén de claves SAML. Póngase en contacto con el administrador del sistema.
 locality=Localidad
 metadata-url=URL de metadatos
 metadata-xml=XML de metadatos
@@ -53,7 +53,7 @@ name-identifier-attribute-name=Nombre de atributo de identificador de nombre
 name-identifier-attribute-name-help=Escriba el nombre de atributo de usuario, como <strong>emailAddress</strong> o <strong>screenName</strong>. Como alternativa, puede usar el prefijo <strong>static:</strong> para usar un valor estático, o bien el prefijo <strong>expando:</strong> para usar un atributo de expando.
 name-identifier-attribute-type=Tipo de atributo de identificador de nombre
 name-identifier-format=Formato de identificador de nombre
-new-identity-provider=Nuevo proveedor de identidad (Automatic Translation)
+new-identity-provider=Nuevo proveedor de identidades
 new-service-provider=Nuevo proveedor de servicios
 organization-unit=Unidad de organización
 persistent=Persistente
@@ -80,7 +80,7 @@ service-provider-defaults=Valores predeterminados del proveedor de servicios
 service-provider-metadata-help=Especifique una URL a los metadatos del proveedor de servicios o cargue un archivo XML de metadatos. Al especificar una URL, los metadatos se actualizan periódicamente. Asegúrese de que los metadatos contienen el certificado de firma del proveedor de servicios.
 signature-algorithm=Algoritmo de firma
 subject-dn=DN de asunto
-there-are-no-identity-providers=Hay no hay proveedores de identidad. (Automatic Translation)
+there-are-no-identity-providers=No hay proveedores de identidades.
 there-are-no-service-providers=No hay proveedores de servicios.
 transient=Temporal
 unspecified=Sin especificar
@@ -93,4 +93,4 @@ valid-from-x-until-x=Válido desde {0} hasta {1}.
 validity-days=Validez (días)
 windows-domain-qualified-name=Nombre completo de dominio de Windows
 x509-subject-name=Nombre de firmante de X509
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Debe configurar conexión de proveedor de por lo menos una identidad para SAML a función. (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Debe configurar como mínimo una conexión de proveedores de identidades para que SAML funcione.
