--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fr.properties
@@ -1,4 +1,4 @@
-add-identity-provider=Ajouter le fournisseur d'identité (Automatic Translation)
+add-identity-provider=Ajouter un fournisseur d'identité
 add-service-provider=Ajouter un fournisseur de service
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Êtes-vous sûr de que vouloir supprimer ce certificat dans le fichier de clés ? (Automatic Translation)
 assertion-lifetime=Longévité des assertions
@@ -33,7 +33,7 @@ force-authn=Forcer Authn
 force-authn-help=Forcez le fournisseur d'identité pour authentifier de nouveau l'utilisateur, quel que soit le contexte de sécurité.
 identity-provider-connection=Connexion au fournisseur d'identité
 identity-provider-connection-entity-id-help=Saisissez l'ID d'entité du fournisseur d'identité. Cette valeur doit correspondre à l'ID d'entité déclaré dans les métadonnées du fournisseur d'identité.
-identity-provider-connections=Connexions de fournisseur d'identité (Automatic Translation)
+identity-provider-connections=Connexions au fournisseur d'identité
 identity-provider-metadata-help=Fournissez une URL vers les métadonnées du fournisseur d'identité ou téléversez un fichier XML de métadonnées. Si vous fournissez une URL, les métadonnées sont régulièrement actualisées. Assurez-vous que les métadonnées contiennent le certificat signé du fournisseur d'identité.
 javax.portlet.title.1_WAR_samlportlet=Garder actif SAML
 javax.portlet.title.2_WAR_samlportlet=Admin SAML
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=Algorithme de clé
 key-length-bits=Longueur des clés (Bits)
 key-password=Mot de passe de la clé
-keystore-exception=Il y avait un problème de chargement du fichier de clés SAML. S'il vous plaît contactez votre administrateur système. (Automatic Translation)
-keystore-password-incorrect=Impossible de s'authentifier avec le keystore SAML. S'il vous plaît contactez votre administrateur système. (Automatic Translation)
+keystore-exception=Un problème est survenu lors du chargement du keystore SAML. Veuillez contacter votre administrateur système.
+keystore-password-incorrect=Impossible d'authentifier le keystore SAML. Veuillez contacter votre administrateur système.
 locality=Localité
 metadata-url=URL des métadonnées
 metadata-xml=XML de métadonnées
@@ -53,10 +53,10 @@ name-identifier-attribute-name=Nom de l'attribut de l'identificateur de nom
 name-identifier-attribute-name-help=Saisissez un nom d'attribut d'utilisateur comme <strong>emailAddress</strong> ou <strong>screenName</strong>. Vous pouvez aussi utiliser le préfixe <strong>static:</strong> pour utiliser une valeur statique, ou le préfixe <strong>expando:</strong> pour utiliser un attribut expando.
 name-identifier-attribute-type=Type d'attribut de l'identificateur de nom
 name-identifier-format=Format de l'identificateur de nom
-new-identity-provider=Nouveau fournisseur d'identité (Automatic Translation)
+new-identity-provider=Nouveau fournisseur d'identité
 new-service-provider=Nouveau fournisseur de service
 organization-unit=Unité d'organisation
-persistent=Persistent
+persistent=Persistant
 please-create-a-signing-credential-before-enabling=Veuillez créer des données de connexion avant d'activer.
 please-create-an-encryption-credential-if-you-want-assertions-encrypted=Veuillez créer des informations d'identification de chiffrement si vous souhaitez que les assertions cryptées. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Veuillez saisir un ID d'entité de fournisseur d'identité unique.
@@ -80,7 +80,7 @@ service-provider-defaults=Défauts du fournisseur de service
 service-provider-metadata-help=Fournissez une URL vers les métadonnées du fournisseur de service ou téléversez un fichier XML de métadonnées. Si vous fournissez une URL, les métadonnées sont régulièrement actualisées. Assurez-vous que les métadonnées contiennent le certificat signé du fournisseur de service.
 signature-algorithm=Algorithme de signature
 subject-dn=DN objet
-there-are-no-identity-providers=Il n'y a aucun fournisseur d'identité. (Automatic Translation)
+there-are-no-identity-providers=Il n'y a aucun fournisseur d'identité.
 there-are-no-service-providers=Il n'y a aucun fournisseur de service.
 transient=Transitoire
 unspecified=Non spécifié
@@ -93,4 +93,4 @@ valid-from-x-until-x=Valide du {0} au {1}.
 validity-days=Validité (jours)
 windows-domain-qualified-name=Nom qualifié du domaine Windows
 x509-subject-name=Nom du sujet X509
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Vous devez configurer la connexion du fournisseur au moins une identité pour SAML pour fonctionner. (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Vous devez configurer au moins une connexion de fournisseur d'identité pour que le SAML fonctionne.
