--- a/modules/private/apps/portal-reports-engine/portal-reports-engine-console-web/src/main/resources/content/Language_ar.properties
+++ b/modules/private/apps/portal-reports-engine/portal-reports-engine-console-web/src/main/resources/content/Language_ar.properties
@@ -1,83 +1,83 @@
-action.ADD_REPORT=إضافة تقرير (Automatic Translation)
-action.ADD_SOURCE=إضافة مصدر (Automatic Translation)
-add-data-source=إضافة مصدر بيانات (Automatic Translation)
-add-definition=إضافة تعريف التقرير (Automatic Translation)
-add-parameter=إضافة معلمة (Automatic Translation)
-add-report=إضافة تقرير (Automatic Translation)
-add-schedule=إضافة جدول (Automatic Translation)
-add-source=إضافة مصدر (Automatic Translation)
-an-error-occurred-while-processing-the-report=حدث خطأ أثناء معالجة التقرير. (Automatic Translation)
-can-not-connect-to-the-data-source=لا يمكن الاتصال بمصدر البيانات. (Automatic Translation)
-can-not-find-driver-class=لا يمكن العثور على برنامج تشغيل فئة. (Automatic Translation)
-category.bi=ذكاء الأعمال & الإبلاغ (Automatic Translation)
-could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=تعذر الاتصال بقاعدة البيانات. الرجاء تحقق من صحة الإعدادات. (Automatic Translation)
-data-source=مصدر البيانات (Automatic Translation)
-data-source-name=اسم مصدر البيانات (Automatic Translation)
-definition-name-help=اسم تعريف (Automatic Translation)
-definition-report-parameters-help=إضافة معلمات التقرير والقيم يتم حقنها في التقرير في وقت التشغيل. (Automatic Translation)
-deliver=تسليم (Automatic Translation)
-deliver-report=تقديم التقرير (Automatic Translation)
-delivery-body=هيئة التسليم (Automatic Translation)
-delivery-email=تسليم البريد الإلكتروني (Automatic Translation)
-delivery-subject=موضوع التسليم (Automatic Translation)
-email-notifications=إعلامات البريد الإلكتروني (Automatic Translation)
-email-recipient=البريد الإلكتروني للمستلم (Automatic Translation)
-entry-report-date-parameters-help=اختر تاريخ لهذه المعلمة، أو بشكل حيوي استخدام الجدول الزمني لبدء تشغيل أو تاريخ الانتهاء (Automatic Translation)
-entry-report-parameters-help=تجاوز التقرير المعلمات والقيم يتم حقنها في التقرير في وقت التشغيل. (Automatic Translation)
-is-schedule-request=طلب المجدول (Automatic Translation)
-javax.portlet.title.com_liferay_portal_reports_engine_console_web_admin_portlet_AdminPortlet=التقارير الإدارية (Automatic Translation)
-javax.portlet.title.com_liferay_portal_reports_engine_console_web_display_portlet_DisplayPortlet=عرض التقارير (Automatic Translation)
-mail-from-address=بريد من العنوان (Automatic Translation)
-mail-from-name=بريد من الاسم (Automatic Translation)
-mail-template-setting=إعداد قالب البريد (Automatic Translation)
-new-data-source=مصدر بيانات جديد (Automatic Translation)
-new-report-definition=تعريف تقرير جديد (Automatic Translation)
-new-report-entry=إدخال جديد في التقرير (Automatic Translation)
-no-report-has-been-generated=قد تم إنشاء لا تقرير. (Automatic Translation)
-no-reports-were-found=تم العثور على أية تقارير. (Automatic Translation)
-no-requested-reports-were-found=تم العثور على لا من التقارير المطلوبة. (Automatic Translation)
-no-sources-were-found=تم العثور على أية مصادر. (Automatic Translation)
-notifications-body=هيئة الإخطارات (Automatic Translation)
-notifications-email=إعلامات البريد الإلكتروني (Automatic Translation)
-notifications-subject=موضوع الإخطارات (Automatic Translation)
-please-enter-a-valid-data-source-driver=الرجاء إدخال "اسم فئة برنامج تشغيل مصدر بيانات" صالحة (Automatic Translation)
-please-enter-a-valid-data-source-name=الرجاء إدخال "اسم مصدر بيانات" صالحة (Automatic Translation)
-please-enter-a-valid-data-source-type=الرجاء إدخال "نوع مصدر بيانات" صالحة (Automatic Translation)
-please-enter-a-valid-data-source-url=الرجاء إدخال عنوان URL مصدر بيانات صالح (Automatic Translation)
-please-enter-a-valid-description=الرجاء إدخال وصفاً صالحاً (Automatic Translation)
-please-enter-a-valid-report-parameter-key=الرجاء إدخال "مفتاح معلمات التقرير" صحيح (Automatic Translation)
-please-enter-a-valid-report-parameter-value=الرجاء إدخال "قيمة معلمة تقرير" صالحة (Automatic Translation)
-please-enter-a-valid-user-name=الرجاء إدخال "اسم مستخدم" صالح (Automatic Translation)
-processing-report.-this-may-take-several-minutes=تجهيز التقرير. قد يستغرق هذا عدة دقائق. (Automatic Translation)
-report-definition-description=وصف تعريف التقرير (Automatic Translation)
-report-definition-id=معرف تعريف التقرير (Automatic Translation)
-report-definition-name=اسم تعريف التقرير (Automatic Translation)
-report-format=تنسيق التقرير (Automatic Translation)
-report-format-help=تنسيقات إخراج التقرير (Automatic Translation)
-report-generation-date=تقرير تاريخ جيل (Automatic Translation)
-report-name=اسم التقرير (Automatic Translation)
-report-parameters=معلمات التقرير (Automatic Translation)
-report-parameters-help=معلمات الإدخال من التقرير (Automatic Translation)
-reporting-date=تاريخ الإبلاغ (Automatic Translation)
-reports=التقارير (Automatic Translation)
-reports-engine-admin-web-configuration-name=تقرير محرك مسؤول ويب (Automatic Translation)
-requested-by=وطلب من (Automatic Translation)
-requested-date=التاريخ المطلوب (Automatic Translation)
-requested-report-id=طلب تقرير معرف (Automatic Translation)
-requested-report-status=وضع التقرير المطلوب (Automatic Translation)
-requesting-user-name=يطلب اسم المستخدم (Automatic Translation)
-scheduler-crontext=نص كرون (Automatic Translation)
-scheduler-from=بدء الجدول الزمني للتقرير (Automatic Translation)
-scheduler-to=نهاية الجدول الزمني للتقرير (Automatic Translation)
-search-requested-report=طلب بحث تقرير (Automatic Translation)
-source-name=اسم المصدر (Automatic Translation)
-sources=مصادر (Automatic Translation)
-succeed-connect-to-the-data-source=ينجح الاتصال بمصدر البيانات. (Automatic Translation)
-template-report=قالب التقرير (Automatic Translation)
-test-database-connection=اختبار اتصال قاعدة البيانات (Automatic Translation)
-that-key-already-exists=هذا المفتاح موجود مسبقاً (Automatic Translation)
-the-name-of-the-report=اسم التقرير (Automatic Translation)
-the-report-url=عنوان التقرير (Automatic Translation)
-unschedule=Unschedule (Automatic Translation)
-view-schedule=عرض الجدول الزمني (Automatic Translation)
-you-have-successfully-connected-to-the-database=بنجاح الاتصال بقاعدة البيانات. (Automatic Translation)
+action.ADD_REPORT=إضافة تقرير
+action.ADD_SOURCE=إضافة مصدر
+add-data-source=إضافة مصدر البيانات
+add-definition=إضافة تعريف للتقرير
+add-parameter=إضافة معلمة
+add-report=إضافة تقرير
+add-schedule=إضافة جدولة
+add-source=إضافة مصدر
+an-error-occurred-while-processing-the-report=حدث خطأ أثناء معالجة التقرير.
+can-not-connect-to-the-data-source=يتعذر الاتصال بمصدر البيانات.
+can-not-find-driver-class=يتعذر العثور على فئة برنامج التشغيل.
+category.bi=ذكاء الأعمال وإعداد التقارير
+could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=يتعذر الاتصال بقاعدة البيانات. لذا، يُرجى التحقق من صحة الإعدادات.
+data-source=مصدر البيانات
+data-source-name=اسم مصدر البيانات
+definition-name-help=اسم التعريف
+definition-report-parameters-help=يضيف معلمات التقارير وقيمها المراد إضافتها إلى التقرير في وقت التشغيل.
+deliver=التسليم
+deliver-report=تسليم التقرير
+delivery-body=نص التسليم
+delivery-email=البريد الإلكتروني للتسليم
+delivery-subject=موضوع التسليم
+email-notifications=إعلامات البريد الإلكتروني
+email-recipient=مستلم البريد الإلكتروني
+entry-report-date-parameters-help=اختر تاريخًا لهذه المعلمة، أو استخدم تاريخ بدء أو إنهاء الجدولة بشكل ديناميكي
+entry-report-parameters-help=يتجاوز معلمات التقارير وقيمها المراد إضافتها إلى التقرير في وقت التشغيل.
+is-schedule-request=طلب مجدول
+javax.portlet.title.com_liferay_portal_reports_engine_console_web_admin_portlet_AdminPortlet=مسؤول التقارير
+javax.portlet.title.com_liferay_portal_reports_engine_console_web_display_portlet_DisplayPortlet=عرض التقارير
+mail-from-address=بريد من عنوان
+mail-from-name=بريد من اسم
+mail-template-setting=إعداد قالب البريد
+new-data-source=مصدر بيانات جديد
+new-report-definition=تعريف تقرير جديد
+new-report-entry=إدخال تقرير جديد
+no-report-has-been-generated=لم يتم إنشاء تقرير.
+no-reports-were-found=لم يتم العثور على تقارير.
+no-requested-reports-were-found=لم يتم العثور على تقارير مطلوبة.
+no-sources-were-found=لم يتم العثور على مصادر.
+notifications-body=نص الإعلامات
+notifications-email=البريد الإلكتروني للإعلامات
+notifications-subject=موضوع الإعلامات
+please-enter-a-valid-data-source-driver=يُرجى إدخال اسم فئة برنامج تشغيل مصدر بيانات صالح
+please-enter-a-valid-data-source-name=يُرجى إدخال اسم مصدر بيانات صالح
+please-enter-a-valid-data-source-type=يُرجى إدخال نوع مصدر بيانات صالح
+please-enter-a-valid-data-source-url=يُرجى إدخال URL لمصدر بيانات صالح
+please-enter-a-valid-description=يُرجى إدخال وصف صالح
+please-enter-a-valid-report-parameter-key=يُرجى إدخال مفتاح معلمة تقرير صالح
+please-enter-a-valid-report-parameter-value=يُرجى إدخال قيمة معلمة تقرير صالحة
+please-enter-a-valid-user-name=يُرجى إدخال اسم مستخدم صالح
+processing-report.-this-may-take-several-minutes=تجري معالجة التقرير. قد يستغرق هذا عدة دقائق.
+report-definition-description=وصف تعريف التقرير
+report-definition-id=معرِّف تعريف التقرير
+report-definition-name=اسم تعريف التقرير
+report-format=صيغة التقرير
+report-format-help=صيغ إنتاج التقارير
+report-generation-date=تاريخ إنشاء التقرير
+report-name=اسم التقرير
+report-parameters=معلمات التقارير
+report-parameters-help=معلمات إدخال التقرير
+reporting-date=تاريخ التقرير
+reports=التقارير
+reports-engine-admin-web-configuration-name=موقع ويب مسؤول محرك التقرير
+requested-by=مطلوب من جانب
+requested-date=تاريخ الطلب
+requested-report-id=معرِّف التقرير المطلوب
+requested-report-status=حالة التقرير المطلوب
+requesting-user-name=اسم المستخدم الطالب
+scheduler-crontext=نص كرون
+scheduler-from=بدء جدولة التقرير
+scheduler-to=انتهاء جدولة التقرير
+search-requested-report=البحث عن تقرير مطلوب
+source-name=اسم المصدر
+sources=المصادر
+succeed-connect-to-the-data-source=نجح الاتصال بمصدر البيانات.
+template-report=قالب التقرير
+test-database-connection=اختبار الاتصال بقاعدة البيانات
+that-key-already-exists=ذلك المفتاح موجود بالفعل
+the-name-of-the-report=اسم التقرير
+the-report-url=URL للتقرير
+unschedule=غير مجدول
+view-schedule=عرض الجدولة
+you-have-successfully-connected-to-the-database=لقد اتصلت بنجاح بقاعدة البيانات.
