--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ar.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ar.properties
@@ -1,4 +1,4 @@
-add-identity-provider=إضافة موفر الهوية (Automatic Translation)
+add-identity-provider=إضافة موفر الهوية
 add-service-provider=إضافة موفر خدمة
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=هل أنت متأكد من أنك تريد حذف هذه الشهادة من كيستوري؟ (Automatic Translation)
 assertion-lifetime=عمر التأكيد
@@ -33,7 +33,7 @@ force-authn=فرض الموافقة
 force-authn-help=إجبار موفر الهوية على إعادة مصادقة المستخدم بغض النظر عن سياق الأمان الموجود.
 identity-provider-connection=اتصال موفر الهوية
 identity-provider-connection-entity-id-help=أدخل معرِّف كيان موفر الهوية. فهذه القيمة يتعين أن تتطابق مع معرِّف الكيان المعلن في بيانات تعريف موفر الهوية.
-identity-provider-connections=اتصالات موفر الهوية (Automatic Translation)
+identity-provider-connections=اتصال موفر الهوية
 identity-provider-metadata-help=أدخل إما عنوان URL لتعريف بيانات تعريف موفر الهوية أو حمل ملف XML للبيانات التعريف. وعندما تدخل عنوان URL، يتم تحديث البيانات التعريفية بشكل دوري. تأكد من احتواء بيانات التعريف على شهادة موقعة من موفر الهوية.
 javax.portlet.title.1_WAR_samlportlet=استمرار SAML
 javax.portlet.title.2_WAR_samlportlet=مسؤول SAML
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=خوارزمية المفتاح
 key-length-bits=طول المفتاح (وحدات بت)
 key-password=كلمة مرور المفتاح
-keystore-exception=وكان هناك مشكلة في تحميل كيستوري SAML. الرجاء الاتصال بمسؤول النظام الخاص بك. (Automatic Translation)
-keystore-password-incorrect=غير قادر على مصادقة مع كيستوري SAML. الرجاء الاتصال بمسؤول النظام الخاص بك. (Automatic Translation)
+keystore-exception=هناك مشكلة في تحميل مخزن مفاتيح SAML. يُرجى الاتصال بمسؤول النظام الخاص بك.
+keystore-password-incorrect=تعذرت المصادقة باستخدام مخزن مفاتيح SAML. يُرجى الاتصال بمسؤول النظام الخاص بك.
 locality=المركز
 metadata-url=عنوان URL لبيانات التعريف
 metadata-xml=عنوان XML لبيانات التعريف
@@ -53,7 +53,7 @@ name-identifier-attribute-name=اسم سمة معرِّف الاسم
 name-identifier-attribute-name-help=أدخل اسم سمة المستخدم مثل <strong>emailAddress</strong> أو <strong>screenName</strong>. أو يمكنك استخدام البادئة <strong>ثابت:</strong> لاستخدام قيمة ثابتة أو بادئة <strong>expando:</strong> لاستخدام سمة expando.
 name-identifier-attribute-type=نوع سمة معرِّف الاسم
 name-identifier-format=صيغة معرِّف الاسم
-new-identity-provider=موفر الهوية الجديدة (Automatic Translation)
+new-identity-provider=موفر هوية جديد
 new-service-provider=موفر خدمة جديد
 organization-unit=وحدة المؤسسة
 persistent=مستمر
@@ -80,7 +80,7 @@ service-provider-defaults=افتراضيات موفر الخدمات
 service-provider-metadata-help=أدخل إما عنوان URL لتعريف بيانات تعريف موفر الخدمة أو حمل ملف XML للبيانات التعريف. وعندما تدخل عنوان URL، يتم تحديث البيانات التعريفية بشكل دوري. تأكد من احتواء بيانات التعريف على شهادة موقعة من موفر الخدمة.
 signature-algorithm=خوارزمية المصادقة
 subject-dn=الاسم المميز للموضوع
-there-are-no-identity-providers=وهناك أية موفرات الهوية. (Automatic Translation)
+there-are-no-identity-providers=لا يوجد موفرين للهوية.
 there-are-no-service-providers=لا يوجد موفرين للخدمات.
 transient=عابر
 unspecified=غير محدد
@@ -93,4 +93,4 @@ valid-from-x-until-x=صالح من {0} حتى {1}.
 validity-days=الصلاحية (بالأيام)
 windows-domain-qualified-name=الاسم المؤهل لمجال Windows
 x509-subject-name=اسم موضوع X509
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=يجب عليك تكوين اتصال موفر الهوية واحدة على الأقل ل SAML إلى الدالة. (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=يجب عليك تكوين اتصال موفر هوية واحد على الأقل لـ SAML لكي يعمل.
