--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
@@ -1,4 +1,4 @@
-add-identity-provider=Add Identity Provider (Automatic Copy)
+add-identity-provider=Lisää Identiteetin Tarjoaja
 add-service-provider=Lisää Palveluntarjoaja
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Väitteen Käyttöikä
@@ -33,7 +33,7 @@ force-authn=Pakota Authn
 force-authn-help=Pakota identiteetin tarjoajaa autentikoimaan käyttäjä uudelleen olemassa olevasta suojauskontekstista riippumatta.
 identity-provider-connection=Identiteetin Tarjoajan Yhteys
 identity-provider-connection-entity-id-help=Syötä identiteetin tarjoajan entiteettitunnste. Tämän arvon on vastattava identiteetin tarjoajan metatiedoissa annettua entiteettitunnistetta.
-identity-provider-connections=Identity Provider Connections (Automatic Copy)
+identity-provider-connections=Identiteetin Tarjoajan Yhteydet
 identity-provider-metadata-help=Anna joko URL identiteetin tarjoajan metatietoihin tai lataa metatieto-XML-tiedosto. Kun annat URL-osoitteen, metatietoja päivitetään jaksollisesti. Varmista, että metatiedot sisältävät identiteetin tarjoajan allekirjoitussertifikaatin.
 javax.portlet.title.1_WAR_samlportlet=SAML:n Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML Hallinta
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=Avainalgoritmi
 key-length-bits=Avaimen Pituus (Bitteinä)
 key-password=Avainsalasana
-keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
-keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-exception=Ongelma ladattaessa SAML keystorea. Ota yhteyttä järjestelmänvalvojaasi.
+keystore-password-incorrect=Ei voida autentikoida SAML keystoren kanssa. Ota yhteyttä järjestelmänvalvojaasi.
 locality=Sijainti
 metadata-url=Metatieto-URL
 metadata-xml=Metatieto-XML
@@ -53,7 +53,7 @@ name-identifier-attribute-name=Nimitunnisteen Määritteen Nimi
 name-identifier-attribute-name-help=Kirjoita käyttäjän määritteen nimi, kuten <strong>emailAddress</strong> tai <strong>displayName</strong>. Vaihtoehtoisesti voit käyttää <strong>static:</strong>-etuliitettä staattisen arvon käyttämiseksi tai <strong>expando:</strong>-etuliitettä käyttääksesi expando-määritettä.
 name-identifier-attribute-type=Nimitunnisteen Määritteen Tyyppi
 name-identifier-format=Nimitunnisteen Muoto
-new-identity-provider=New Identity Provider (Automatic Copy)
+new-identity-provider=Uusi Identiteetin Tarjoaja
 new-service-provider=Uusi Palveluntarjoaja
 organization-unit=Organisaatioyksikkö
 persistent=Jatkuva
@@ -80,7 +80,7 @@ service-provider-defaults=Palveluntarjoajan Oletukset
 service-provider-metadata-help=Anna joko URL palveluntarjoajan metatietoihin tai lataa metatieto-XML-tiedosto. Kun annat URL-osoitteen, metatietoja päivitetään jaksollisesti. Varmista, että metatiedot sisältävät palveluntarjoajan allekirjoitussertifikaatin.
 signature-algorithm=Allekirjoitusalgoritmi
 subject-dn=Aihe DN
-there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
+there-are-no-identity-providers=Ei ole identiteetin tarjoajia.
 there-are-no-service-providers=Ei ole palveluntarjoajia.
 transient=Ohimenevä
 unspecified=Määrittelemätön
@@ -93,4 +93,4 @@ valid-from-x-until-x=Voimassa {0} alkaen {1} saakka.
 validity-days=Voimassaolo (päiviä)
 windows-domain-qualified-name=Windowsin Toimialueen Täydellinen Nimi
 x509-subject-name=X509-aihenimi
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Sinun on määritettävä vähintään yksi identiteetintarjoajayhteys, jotta SAML toimii.
