--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ja.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ja.properties
@@ -1,4 +1,4 @@
-add-identity-provider=Add Identity Provider (Automatic Copy)
+add-identity-provider=アイデンティティ・プロバイダーを追加
 add-service-provider=サービス・プロバイダーを追加
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=アサーション有効期間
@@ -33,7 +33,7 @@ force-authn=Authnを強制する
 force-authn-help=既存のセキュリティコンテキストに関係なく、ユーザーを再認証するアイデンティティ・プロバイダーを強制的に指定します。
 identity-provider-connection=アイデンティティ・プロバイダー接続
 identity-provider-connection-entity-id-help=アイデンティティ・プロバイダーのエンティティIDを入力します。この値は、アイデンティティ・プロバイダーのメタデータで宣言されているエンティティIDと一致する必要があります。
-identity-provider-connections=Identity Provider Connections (Automatic Copy)
+identity-provider-connections=アイデンティティ・プロバイダー接続
 identity-provider-metadata-help=アイデンティティ・プロバイダーにURLを指定するか、メタデータXMLファイルをアップロードします。URLを提供する場合、メタデータは定期的に更新されます。メタデータには、アイデンティティ・プロバイダーの署名された証明書が含まれていることを確認してください。
 javax.portlet.title.1_WAR_samlportlet=SAML Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML管理
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=鍵のアルゴリズム
 key-length-bits=キー長（ビット単位）
 key-password=キーのパスワード
-keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
-keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-exception=SAMLキーストアの読み込み中に問題が発生しました。システム管理者にご連絡ください。
+keystore-password-incorrect=SAMLキーストアで認証できません。システム管理者にご連絡ください。
 locality=地域
 metadata-url=メタデータURL
 metadata-xml=メタデータXML
@@ -53,7 +53,7 @@ name-identifier-attribute-name=名前識別子属性名
 name-identifier-attribute-name-help=<strong>emailAddress</strong> や <strong>screenName</strong>といったユーザー属性を入力してください。他に静的変数には<strong>static:</strong>プレフィックスを利用でき、Expando属性には <strong>expando:</strong> プレフィックスが利用できます。
 name-identifier-attribute-type=名前識別子属性タイプ
 name-identifier-format=名前識別子フォーマット
-new-identity-provider=New Identity Provider (Automatic Copy)
+new-identity-provider=新規アイデンティティ・プロバイダー
 new-service-provider=新規サービスプロバイダー
 organization-unit=組織単位
 persistent=永続的
@@ -80,7 +80,7 @@ service-provider-defaults=サービス・プロバイダーデフォルト
 service-provider-metadata-help=サービス・プロバイダーにURLを指定するか、メタデータXMLファイルをアップロードします。URLを提供する場合、メタデータは定期的に更新されます。メタデータにサービス・プロバイダーの署名された証明書が含まれていることを確認してください。
 signature-algorithm=署名アルゴリズム
 subject-dn=サブジェクトDN
-there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
+there-are-no-identity-providers=アイデンティティ・プロバイダーはありません。
 there-are-no-service-providers=サービスプロバイダーはありません。
 transient=一時的な値
 unspecified=未指定
@@ -93,4 +93,4 @@ valid-from-x-until-x={0} から {1} まで有効です。
 validity-days=有効期限（日）
 windows-domain-qualified-name=Windowsドメイン修飾名
 x509-subject-name=X509 サブジェクト名
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=SAMLを機能させるには少なくともアイデンティティ・プロバイダー１つ設定してください。
