--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl.properties
@@ -1,4 +1,4 @@
-add-identity-provider=Add Identity Provider (Automatic Copy)
+add-identity-provider=Identiteitsprovider toevoegen
 add-service-provider=Serviceprovider toevoegen
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Levensduur bewering
@@ -33,7 +33,7 @@ force-authn=Authenticatie forceren
 force-authn-help=De identiteitsprovider dwingen om de gebruiker opnieuw te authenticeren ongeacht de bestaande beveiligingscontext.
 identity-provider-connection=Verbinding identiteitsprovider
 identity-provider-connection-entity-id-help=Voer de entiteit-ID van de identiteitsprovider in. Deze waarde moet overeenkomen met de entiteit-ID die opgegeven is in de metadata van de identiteitsprovider.
-identity-provider-connections=Identity Provider Connections (Automatic Copy)
+identity-provider-connections=Verbindingen identiteitsprovider
 identity-provider-metadata-help=Geef ofwel een URL op aan de metadata van de identiteitsprovider, of upload een metadata XML-bestand. Wanneer u een URL opgeeft, worden de metadata regelmatig bijgewerkt. Zorg ervoor dat de metadata het handtekeningcertificaat van de identiteitsprovider bevatten.
 javax.portlet.title.1_WAR_samlportlet=SAML Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML-beheerder
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=Sleutelalgoritme
 key-length-bits=Sleutellengte (Bit)
 key-password=Sleutelwachtwoord
-keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
-keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-exception=Er was een probleem bij het laden van de SAML-keystore. Neem contact op met uw systeembeheerder.
+keystore-password-incorrect=Authenticatie met de SAML-keystore is niet mogelijk. Neem contact op met uw systeembeheerder.
 locality=Plaats
 metadata-url=URL metadata
 metadata-xml=XML metadata
@@ -53,7 +53,7 @@ name-identifier-attribute-name=Naam kenmerk naam identificatie-element
 name-identifier-attribute-name-help=Voer namen voor gebruikerskenmerken in zoals <strong>emailAddress</strong> of <strong>screenName</strong>. U kunt ook het voorvoegsel <strong>static:</strong> gebruiken voor een statische waarde, of <strong>expando:</strong> voor een expando-kenmerk.
 name-identifier-attribute-type=Type kenmerk naam identificatie-element
 name-identifier-format=Naam indeling identificatie-element
-new-identity-provider=New Identity Provider (Automatic Copy)
+new-identity-provider=Nieuwe identiteitsprovider
 new-service-provider=Nieuwe serviceprovider
 organization-unit=Organisatie-eenheid
 persistent=Persistent
@@ -80,7 +80,7 @@ service-provider-defaults=Standaardinstellingen serviceprovider
 service-provider-metadata-help=Geef ofwel een URL op aan de metadata van de serviceprovider, of upload een metadata XML-bestand. Wanneer u een URL opgeeft, worden de metadata regelmatig bijgewerkt. Zorg ervoor dat de metadata het handtekeningcertificaat van de serviceprovider bevatten.
 signature-algorithm=Algoritme voor ondertekening
 subject-dn=DN onderwerp
-there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
+there-are-no-identity-providers=Er zijn geen identiteitsproviders.
 there-are-no-service-providers=Er zijn geen serviceproviders.
 transient=Tijdelijk
 unspecified=Niet gespecificeerd
@@ -93,4 +93,4 @@ valid-from-x-until-x=Geldig van {0} tot {1}.
 validity-days=Geldigheid (dagen)
 windows-domain-qualified-name=Gekwalificeerde naam Windowsdomein
 x509-subject-name=X509 naam onderwerp
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=U moet minstens één identiteitspoviderverbinding configureren opdat SAML zou werken.
