--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sv.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sv.properties
@@ -1,4 +1,4 @@
-add-identity-provider=Add Identity Provider (Automatic Copy)
+add-identity-provider=Lägg till identitetsleverantör
 add-service-provider=Lägg till tjänstleverantör
 are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Livstid för kontroll
@@ -33,7 +33,7 @@ force-authn=Tvinga AuthN
 force-authn-help=Tvinga identitetsleverantören att återautentisera användare oavsett den befintliga säkerhetskontexten.
 identity-provider-connection=Anslutning för identitetsleverantör
 identity-provider-connection-entity-id-help=Ange enhets-ID för identitetsleverantören. Värdet måste matcha enhets-ID:t som visas i metadata för identitetsleverantören.
-identity-provider-connections=Identity Provider Connections (Automatic Copy)
+identity-provider-connections=Anslutningar för identitetsleverantör
 identity-provider-metadata-help=Ange antingen en URL för metadata för identitetsleverantören eller ladda upp en XML-metadatafil. När du anger en URL uppdateras metadatan periodiskt. Se till att metadatan innehåller identitetsleverantörens signeringscertifikat.
 javax.portlet.title.1_WAR_samlportlet=SAML-Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML-admin
@@ -42,8 +42,8 @@ kerberos=Kerberos
 key-algorithm=Nyckelalgoritm
 key-length-bits=Nyckellängd (bitar)
 key-password=Nyckellösenord
-keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
-keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-exception=Det gick inte att ladda SAML-nyckellagret. Kontakta din systemadministratör.
+keystore-password-incorrect=Det går inte att autentisera med samma SAML-nyckellager. Kontakta din systemadministratör.
 locality=Plats
 metadata-url=Metadata-URL
 metadata-xml=Metadata-XML
@@ -53,7 +53,7 @@ name-identifier-attribute-name=Attributnamn för namnidentifierare
 name-identifier-attribute-name-help=Ange användarattributnamn som <strong>emailAddress</strong> eller <strong>screenName</strong>. Alternativt kan du använda <strong>statiskt:</strong> prefix för att använda ett statiskt värde eller <strong>expando:</strong>-prefix för att använda ett expando-attribut.
 name-identifier-attribute-type=Attributtyp för namnidentifierare
 name-identifier-format=Format för namnidentifierare
-new-identity-provider=New Identity Provider (Automatic Copy)
+new-identity-provider=Ny identitetsleverantör
 new-service-provider=Ny tjänstleverantör
 organization-unit=Organisationsenhet
 persistent=Beständig
@@ -80,7 +80,7 @@ service-provider-defaults=Standardvärden för tjänsteleverantör
 service-provider-metadata-help=Ange antingen en URL för metadata för tjänstleverantören eller ladda upp en XML-metadatafil. När du anger en URL uppdateras metadatan periodiskt. Se till att metadatan innehåller tjänstleverantörens signeringscertifikat.
 signature-algorithm=Signeringsalgoritm
 subject-dn=Ämnes-DN
-there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
+there-are-no-identity-providers=Det finns inga identitetsleverantörer.
 there-are-no-service-providers=Det finns inga tjänstleverantörer.
 transient=Tillfälligt
 unspecified=Ospecificerat
@@ -93,4 +93,4 @@ valid-from-x-until-x=Giltigt från {0} tills {1}.
 validity-days=Giltighet (dagar)
 windows-domain-qualified-name=Kvalificerat namn för Windows-domän
 x509-subject-name=X509-ämnesnamn
-you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Du måste konfigurera minst en identitetsleverantörsanslutning för att SAML ska fungera.
