--- a/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/private/apps/portal-workflow/portal-workflow-metrics-lang/src/main/resources/content/Language_hu.properties
@@ -1,21 +1,21 @@
-a-duration-time-is-required=Egy időtartam időre szükség. (Automatic Translation)
-a-name-is-required=Meg kell adni a nevét. (Automatic Translation)
-an-sla-with-the-same-name-already-exists=Már létezik egy azonos nevű SLA. (Automatic Translation)
-entries=Bejegyzések (Automatic Translation)
-items=Elemek (Automatic Translation)
-metrics=Metrikák (Automatic Translation)
-next=Következő (Automatic Translation)
-no-current-metrics=Nem aktuális mutatókat (Automatic Translation)
-no-results-were-found=Eredmények nem találtak. (Automatic Translation)
-on-time=Az idő (Automatic Translation)
-once-there-are-active-processes-metrics-will-appear-here=Egyszer aktív folyamatok, mért jelenik meg itt. (Automatic Translation)
-open-processes-summary=Nyílt folyamatok Összefoglaló (Automatic Translation)
-overdue=Lejárt (Automatic Translation)
-previous=Korábbi (Automatic Translation)
-process-name=Folyamat neve (Automatic Translation)
-search-for=Keressen... (Automatic Translation)
-showing=Találat (Automatic Translation)
-showing-x-to-x-of-x-entries=Showing {0} to {1} of {2} entries. (Automatic Copy)
-total-open=Teljes megnyitása (Automatic Translation)
-x-item={0} Item (Automatic Copy)
-x-items={0} Items (Automatic Copy)
+a-duration-time-is-required=Az időtartam ideje kötelező.
+a-name-is-required=A név kötelező.
+an-sla-with-the-same-name-already-exists=Egy ilyen nevű SLA már létezik.
+entries=Bejegyzések
+items=Elemek
+metrics=Mérési adatok
+next=Következő
+no-current-metrics=Nincsenek aktuális mérési adatok
+no-results-were-found=Nem találhatók eredmények.
+on-time=Időben
+once-there-are-active-processes-metrics-will-appear-here=Amikor aktív eljárások vannak folyamatban, itt jelennek meg a mérési adatok.
+open-processes-summary=Nyitott eljárások összesítése
+overdue=Megkésett
+previous=Előző
+process-name=Eljárás neve
+search-for=Keresés...
+showing=Megjelenítve
+showing-x-to-x-of-x-entries=Megjelenítve {0} - {1} / {2} bejegyzésből.
+total-open=Nyitottak összesen
+x-item={0} Elem
+x-items={0} Elem
